sending messages between wear and phone and basic 4sq api integration

--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'Teleport:teleportlib:0.1.1'
 }
