--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'Teleport:teleportlib:0.1.1'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
 }
