--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.jakewharton:butterknife:5.1.1'
 }
