--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-wearable:+'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'Teleport:teleportlib:0.1.1'
+    compile 'com.squareup:otto:1.3.5'
 }
