--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
             android:name=".activity.CheckInActivity"
-            android:label="@string/app_name" >
+            android:label="@string/check_in" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
