--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -32,7 +32,7 @@ android {
 
 dependencies {
     compile 'com.google.android.support:wearable:+'
-    compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'com.google.android.gms:play-services-wearable:5.0.77'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'Teleport:teleportlib:0.1.1'
     compile 'com.squareup:otto:1.3.5'
