--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 20
         versionCode 2
         versionName "0.6-ALPHA"
+        buildConfigField "String", "CLIENT_ID", "\"" + WSQ_4SQ_CLIENT_ID + "\"";
+        buildConfigField "String", "CLIENT_SECRET", "\"" + WSQ_4SQ_CLIENT_SECRET + "\"";
     }
 
     signingConfigs {
