--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 15
         targetSdkVersion 20
-        versionCode 2
-        versionName "0.6-ALPHA"
+        versionCode 3
+        versionName "1.0.0"
         buildConfigField "String", "CLIENT_ID", "\"" + WSQ_4SQ_CLIENT_ID + "\"";
         buildConfigField "String", "CLIENT_SECRET", "\"" + WSQ_4SQ_CLIENT_SECRET + "\"";
     }
