--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 15
         targetSdkVersion 20
-        versionCode 4
-        versionName "1.0.1"
+        versionCode = Integer.parseInt(VERSION_CODE)
+        versionName = VERSION_NAME
         buildConfigField "String", "CLIENT_ID", "\"" + WSQ_4SQ_CLIENT_ID + "\"";
         buildConfigField "String", "CLIENT_SECRET", "\"" + WSQ_4SQ_CLIENT_SECRET + "\"";
     }
