--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -31,8 +31,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.support:wearable:+'
-    compile 'com.google.android.gms:play-services-wearable:5.0.77'
+    compile 'com.google.android.support:wearable:1.0.0'
+    compile 'com.google.android.gms:play-services-wearable:6.1.11'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'Teleport:teleportlib:0.1.3'
     compile 'com.squareup:otto:1.3.5'
