--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 15
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode = Integer.parseInt(VERSION_CODE)
         versionName = VERSION_NAME
         buildConfigField "String", "CLIENT_ID", "\"" + WSQ_4SQ_CLIENT_ID + "\"";
@@ -25,7 +25,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             signingConfig signingConfigs.release
         }
     }
@@ -34,8 +34,8 @@ android {
 dependencies {
     wearApp project(':wear')
     compile project(':foursquare-oauth-library')
-    compile 'com.google.android.gms:play-services-wearable:6.1.11'
-    compile 'Teleport:teleportlib:0.1.3'
+    compile 'com.google.android.gms:play-services-wearable:6.5.87'
+    compile 'Teleport:teleportlib:0.1.4'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.picasso:picasso:2.3.3'
