--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 20
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode = Integer.parseInt(VERSION_CODE)
         versionName = VERSION_NAME
     }
@@ -24,16 +24,16 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             signingConfig signingConfigs.release
         }
     }
 }
 
 dependencies {
-    compile 'com.google.android.support:wearable:1.0.0'
-    compile 'com.google.android.gms:play-services-wearable:6.1.11'
+    compile 'com.google.android.support:wearable:1.1.0'
+    compile 'com.google.android.gms:play-services-wearable:6.5.87'
     compile 'com.jakewharton:butterknife:5.1.1'
-    compile 'Teleport:teleportlib:0.1.3'
+    compile 'Teleport:teleportlib:0.1.4'
     compile 'com.squareup:otto:1.3.5'
 }
