--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     wearApp project(':wear')
     compile project(':foursquare-oauth-library')
     compile 'com.google.android.gms:play-services-wearable:6.5.87'
+    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'Teleport:teleportlib:0.1.4'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
