--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 18
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode = Integer.parseInt(VERSION_CODE)
         versionName = VERSION_NAME
         buildConfigField "String", "CLIENT_ID", "\"" + WSQ_4SQ_CLIENT_ID + "\"";
@@ -33,13 +33,14 @@ android {
 
 dependencies {
     wearApp project(':wear')
-    compile project(':foursquare-oauth-library')
-    compile 'com.google.android.gms:play-services-wearable:6.5.87'
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services-wearable:7.8.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'Teleport:teleportlib:0.1.4'
-    compile 'com.jakewharton:butterknife:5.1.1'
-    compile 'com.squareup.retrofit:retrofit:1.6.1'
-    compile 'com.squareup.picasso:picasso:2.3.3'
-    compile 'com.crittercism:crittercism-android-agent:4.5.3'
-    compile 'com.anjlab.android.iab.v3:library:1.0.8@aar'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.crittercism:crittercism-android-agent:5.3.3'
+    compile 'com.anjlab.android.iab.v3:library:1.0.28'
+    compile 'com.foursquare:foursquare-android-oauth:1.0.3'
 }
