--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.ben-manes.versions'
 
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "cz.destil.wearsquare"
         minSdkVersion 20
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode = Integer.parseInt(VERSION_CODE)
         versionName = VERSION_NAME
     }
@@ -31,9 +32,9 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.support:wearable:1.1.0'
-    compile 'com.google.android.gms:play-services-wearable:6.5.87'
-    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.google.android.support:wearable:1.3.0'
+    compile 'com.google.android.gms:play-services-wearable:7.8.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'Teleport:teleportlib:0.1.4'
-    compile 'com.squareup:otto:1.3.5'
+    compile 'com.squareup:otto:1.3.8'
 }
