--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,22 @@ buildscript {
     repositories {
         jcenter()
     }
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.4.0-beta3'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+        classpath 'io.fabric.tools:gradle:1.20.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+    }
+
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
